--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,10 @@ find_package(OpenCV REQUIRED )
 
 include_directories(${OpenCV_INCLUDE_DIRS})
 include_directories(.)
+set(PUBLIC_INCLUDE_DIRECTORIES ${OpenCV_INCLUDE_DIRS})
 
-set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-O3 --use_fast_math --ptxas-options=-v -std=c++11 --compiler-options -Wall -gencode arch=compute_30,code=sm_30 -gencode arch=compute_52,code=sm_52)
-#set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-O3 --use_fast_math --ptxas-options=-v -std=c++11 --compiler-options -Wall -gencode arch=compute_52,code=sm_52)
+#set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-O3 --use_fast_math --ptxas-options=-v -std=c++11 --compiler-options -Wall -gencode arch=compute_30,code=sm_30 -gencode arch=compute_52,code=sm_52)
+set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-O3 -lineinfo --use_fast_math --ptxas-options=-v -std=c++11 --compiler-options -Wall -gencode arch=compute_60,code=sm_60)
 
 if(CMAKE_COMPILER_IS_GNUCXX)
     add_definitions(-std=c++11)
@@ -25,28 +26,50 @@ if (OPENMP_FOUND)
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 endif()
 
+set(HEADERS
+  gipuma.h
+  files.h
+  imageinfo.h
+  config.h
+  managed.h
+  helper_cuda.h
+  helper_string.h
+  mathUtils.h
+  cameraGeometryUtils.h
+  vector_operations.h
+  camera.h
+  globalstate.h
+  algorithmparameters.h
+  cameraparameters.h
+  linestate.h
+  groundTruthUtils.h
+  displayUtils.h
+  fileIoUtils.h)
 
 # For compilation ...
 # Specify target & source files to compile it from
-cuda_add_executable(
-    gipuma
-    cameraGeometryUtils.h
-    vector_operations.h
-    camera.h
-    globalstate.h
-    algorithmparameters.h
-    cameraparameters.h
-    linestate.h
-    groundTruthUtils.h
-    displayUtils.h
-    fileIoUtils.h
-    main.h
-    gipuma.cu
-    main.cpp
-    )
+cuda_add_library(gipuma SHARED gipuma.cu)
+cuda_add_executable(gipuma_main main.cpp)
 
 # For linking ...
 # Specify target & libraries to link it with
-target_link_libraries(gipuma
-    ${OpenCV_LIBS}
-    )
+target_link_libraries(gipuma ${OpenCV_LIBS})
+target_link_libraries(gipuma_main gipuma)
+
+install(FILES ${HEADERS} DESTINATION include/gipuma)
+
+install(TARGETS gipuma
+  EXPORT GipumaTarget
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib)
+
+set(GIPUMA_LIBRARY "${CMAKE_INSTALL_PREFIX}/lib/libgipuma.so")
+
+install(FILES ${CONFIG_FILE} DESTINATION lib/cmake)
+
+set(CONFIG_FILE "${CMAKE_CURRENT_BINARY_DIR}/cmake/GipumaConfig.cmake")
+configure_file(${PROJECT_SOURCE_DIR}/cmake/GipumaConfig.cmake.in
+  ${CONFIG_FILE} @ONLY)
+install(FILES ${CONFIG_FILE} DESTINATION lib/cmake)
+install(EXPORT GipumaTarget
+  DESTINATION lib/cmake)
